--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -69,6 +69,13 @@
         background-color: transparent;
         color: black;
       }
+
+      .searchIa-buttons-wrapper {
+        border-top: 1px solid black;
+        border-right: 1px solid black;
+        border-bottom: 1px solid black;
+        border-radius: 0 0.5rem 0.5rem 0;
+      }
     }
   }
 
